# sql-mcp-server

./: .flake8  .gitignore  CLAUDE.md  README.md  TODO.md  config_example.yaml  database_manager.py  describe_table_improvement_plan.md  foreign_key_queries.md  list_tables_improvement_plan.md  main.py  password_provider.py  pyproject.toml  schema_table_queries.md  table_column_queries.md  wishlist.md
tests/: test_config.yaml  test_database_config.py  test_describe_table.py  test_execute_query.py  test_list_databases.py  test_list_tables.py  test_password_provider.py  test_sample_table.py
tests/database_manager/: test_config_validation.py  test_connection_behaviors.py  test_database_manager_passwords.py  test_integration_database_manager.py  test_url_generation.py
tests/test_database_manager/: test_config_validation.py  test_engines.py  test_passwords.py  test_url_generation.py
tests/tools/: test_config.yaml  test_describe_table.py  test_execute_query.py  test_list_databases.py  test_list_tables.py  test_sample_table.py
tools/: __init__.py  common.py  describe_table.py  execute_query.py  list_databases.py  list_tables.py  sample_table.py  test_connection.py
